merge dataflow changes from idea
fix #93